<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/goalDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_goal_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/goalInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:gravity="center"
        android:hint="@string/set_goal_hint"
        android:maxLength="5"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnRecommended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_goal_recommended"
            android:backgroundTint="@color/button_bg"
            android:textColor="@color/button_text"
            style="@style/AppButton" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_goal_ok"
            android:backgroundTint="@color/button_bg"
            android:textColor="@color/button_text"
            style="@style/AppButton" />
    </LinearLayout>
</LinearLayout>