<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/batteryDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/batteryDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_dialog_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/batteryDialogDeny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deny"
            android:backgroundTint="@color/button_bg"
            android:textColor="@color/button_text"
            style="@style/AppButton"
            android:layout_marginEnd="12dp"/>

        <Button
            android:id="@+id/batteryDialogAllow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            android:backgroundTint="@color/button_bg"
            android:textColor="@color/button_text"
            style="@style/AppButton"/>
    </LinearLayout>
</LinearLayout>