<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/temperatureDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_temperature_threshold"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <NumberPicker
        android:id="@+id/dialogNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnCancelTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_temperature_cancel"
            android:backgroundTint="@color/button_bg"
            android:textColor="@color/button_text"
            style="@style/AppButton" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnOkTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_temperature_ok"
            android:backgroundTint="@color/button_bg"
            android:textColor="@color/button_text"
            style="@style/AppButton" />
    </LinearLayout>
</LinearLayout>